--- a/cliente/app/views/inicio/cadastro.html
+++ b/cliente/app/views/inicio/cadastro.html
@@ -12,27 +12,27 @@
       <div data-ng-show="error" class="alert alert-danger">
         {{errorMessage}}
       </div>
-      <input type="text" name = "nome" class="form-control" translate translate-attr-placeholder= 'cadastro.nome' required ng-model="usuario.nome">
+      <input type="text" name = "nome" class="form-control" placeholder="Nome" required ng-model="usuario.nome">
     </div>
     <div class="form-group">
-      <input type="email" name = "email" class="form-control" translate translate-attr-placeholder= 'cadastro.email'
-             title="{{ 'cadastro.email.check' | translate}}"
+      <input type="email" name = "email" class="form-control" placeholder="Email"
+ -           title="Preencha com um email válido. Exemplo caroname@caroname.com"             
              required ng-model="usuario.email">             
     </div>
 
     <div class="form-group">
-      <input type="password" name = "senha" class="form-control" translate translate-attr-placeholder= 'cadastro.senha'
-             title="{{ 'cadastro.senha.check' | translate}}" pattern=".{8,}" required ng-model="usuario.senha">
+      <input type="password" name = "senha" class="form-control" placeholder="Senha"
+ -             title="Pelo menos 8 characteres" pattern=".{8,}" required ng-model="usuario.senha">
     </div>
 
     <div class="form-group">
-      <input type="text" name = "numeroMatricula" class="form-control" translate translate-attr-placeholder= 'cadastro.matricula'
-             title="{{ 'cadastro.matricula.check' | translate}}" pattern="[1-7,9][0-1][0-6][0-1][1-4][0-9]{4}"
+      <input type="text" name = "numeroMatricula" class="form-control" placeholder="Nº Matricula"
+ -            title="Digite os 9 números da sua matrícula da UFCG" pattern="[1-7,9][0-1][0-6][0-1][1-4][0-9]{4}"              
              maxlength="9"  required ng-model="usuario.matricula">
     </div>
 
     <div class="form-group">
-      <input type="text" name = "rua" class="form-control" translate translate-attr-placeholder= 'cadastro.rua' required ng-model="usuario.endereco.rua">
+     <input type="text" name = "rua" class="form-control" placeholder="Rua" required ng-model="usuario.endereco.rua">
     </div>
 
     <div class="form-group">
@@ -41,8 +41,8 @@
     </div>
 
     <div class="form-group">
-      <input type="text" name = "telefone" class="form-control" translate translate-attr-placeholder= 'cadastro.telefone' maxlength="9"
-             pattern="[0-9]{8,9}" title="{{ 'cadastro.telefone.check' | translate}}" required ng-model="usuario.telefone">
+      <input type="text" name = "telefone" class="form-control" placeholder="Telefone sem ddd" maxlength="9"
+             pattern="[0-9]{8,9}" title="Digite os números do seu telefone" required ng-model="usuario.telefone">
     </div>
     
     <input type="submit" class="btn btn-default" value="Ok" data-ng-disabled="form.nome.$error.required ||
