--- a/cliente/app/styles/usuario/notificacao.css
+++ b/cliente/app/styles/usuario/notificacao.css
@@ -1,56 +1,10 @@
-#aceitarCarona {
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-#rejeitarCarona {
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-#rejeitarCarona:hover {
-  background-color: #ff291c ;
-  color: white;
-}
-
-.align-right {
-  float: right;
-}
-
-.containerNotificacao {
-  background-color: transparent;
-  background:transparent;
-  width: 1100px;
-  text-align: center;
-  margin-top: 5px;
-  margin-left: 100px;
-  margin-right: auto;
-  position: relative;
-  padding-top: 30px;
-  padding-left: 30px;
-  font-size: 18px;
-  text-align: justify;
+.notify {
+  color: rgb(0,121,192);
+  left: 200px;
 
 }
 
-#panelNotification{
-  width: 250px;
-}
+.divNotify {
+  width: 600px;
 
-#fonteNotification{
-  font-size: 12px;
 }
-
-.notificationPop{
-  position: relative;
-  right: 710px;
-}
-
-.notificationPopText{
-  position: relative;
-}
-
-#alignText{
-  text-align: center;
-}
-
