--- a/cliente/app/views/inicio/main.html
+++ b/cliente/app/views/inicio/main.html
@@ -26,7 +26,7 @@
 
       <br>
     <button type="submit" class="btn btn-default btn-default-blue" data-ng-disabled="form.email.$error.required || form.senha.$error.required" data-ng-click="logar(usuario)" >Login </button>
-    <button type="button" class="btn btn-default btn-default-blue" value="Cadastrar" ng-click="trocar()">Cadastrar</button>
+    <button type="button" class="btn btn-default btn-default-blue" value="Cadastrar" ng-click="trocar()">{{ 'main.cadastro' | translate }}</button>
   </form>
 
 </div>
