--- a/cliente/app/views/inicio/main.html
+++ b/cliente/app/views/inicio/main.html
@@ -15,13 +15,15 @@
     <div class="form-group-login">
         <label for="email"> <h5 ><b>
           Email <span class="glyphicon glyphicon-user" aria-hidden="true"></span> </b></h5></label>
-        <input type="email" class="form-control" name="email" placeholder="Digite o e-mail" autofocus required data-ng-model="usuario.email">
-
+<!--        <input type="email" class="form-control" name="email" placeholder="{{ 'main.email.type' | translate }}" autofocus required data-ng-model="usuario.email">
+-->
+      <input type="email" class="form-control" name="email" placeholder="Placeholder" translate translate-attr-placeholder="main.email.type"
+             autofocus required data-ng-model="$parent.usuario.email">
     </div>
     <div class="form-group-login">
         <label for="password"> <h5 ><b>
           Senha <span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span> </b></h5></label>
-        <input type="password" class="form-control" name="senha" placeholder="Digite a senha" autofocus required data-ng-model="usuario.senha">
+        <input type="password" class="form-control" name="senha" placeholder="{{ 'main.senha.type' | translate }}" autofocus required data-ng-model="usuario.senha">
     </div>
 
       <br>
