--- a/cliente/app/views/inicio/cadastro.html
+++ b/cliente/app/views/inicio/cadastro.html
@@ -13,24 +13,24 @@
       <div data-ng-show="error" class="alert alert-danger">
         {{errorMessage}}
       </div>
-      <input type="text" name = "nome" class="form-control" placeholder="Nome" required ng-model="usuario.nome">
+      <input type="text" name = "nome" class="form-control" placeholder="{{ 'nome' | translate }}" required ng-model="usuario.nome">
     </div>
     <div class="form-group">
-      <input type="email" name = "email" class="form-control" placeholder="Email" title="Preencha com um email válido. Exemplo caroname@caroname.com"             
+      <input type="email" name = "email" class="form-control" placeholder="{{ 'email' | translate }}" title="Preencha com um email válido. Exemplo caroname@caroname.com"             
              required ng-model="usuario.email">             
     </div>
 
     <div class="form-group">
-      <input type="password" name = "senha" class="form-control" placeholder="Senha" title="Pelo menos 8 characteres" pattern=".{8,}" required ng-model="usuario.senha">
+      <input type="password" name = "senha" class="form-control" placeholder="{{ 'main.senha' | translate }}" title="Pelo menos 8 characteres" pattern=".{8,}" required ng-model="usuario.senha">
     </div>
 
     <div class="form-group">
-      <input type="text" name = "numeroMatricula" class="form-control" placeholder="Nº Matricula"
+      <input type="text" name = "numeroMatricula" class="form-control" placeholder="{{ 'cadastro.matricula' | translate }}"
            title="Digite os 9 números da sua matrícula da UFCG" pattern="[1-7,9][0-1][0-6][0-1][1-4][0-9]{4}" maxlength="9"  required ng-model="usuario.matricula">
     </div>
 
     <div class="form-group">
-     <input type="text" name = "rua" class="form-control" placeholder="Rua" required ng-model="usuario.endereco.rua">
+     <input type="text" name = "rua" class="form-control" placeholder="{{ 'rua' | translate }}" required ng-model="usuario.endereco.rua">
     </div>
 
     <div class="form-group">
@@ -39,7 +39,7 @@
     </div>
 
     <div class="form-group">
-      <input type="text" name = "telefone" class="form-control" placeholder="Telefone sem ddd" maxlength="9"
+      <input type="text" name = "telefone" class="form-control" placeholder="{{ 'cadastro.telefone' | translate }}" maxlength="9"
              pattern="[0-9]{8,9}" title="Digite os números do seu telefone" required ng-model="usuario.telefone">
     </div>
 
