--- a/cliente/app/views/usuario/carona.html
+++ b/cliente/app/views/usuario/carona.html
@@ -54,7 +54,7 @@
 
                             <div class="form-group">
                                 <label for="tipoCarona"> <h5><b>
-                                    {{ 'tipoDeCarona' | translate }}</b></h5></label>
+                                    {{ 'rotas' | translate }}</b></h5></label>
 
                                 <select class="form-control" ng-model="rota" ng-options="opt.value for opt in bairros">
                                 </select>
