--- a/cliente/app/views/usuario/busca.html
+++ b/cliente/app/views/usuario/busca.html
@@ -80,7 +80,7 @@
               </div>
             </a>
             <p></p>
-            <p id = "fontSizeBusca"><b>{{ 'nome' | translate }}</b>: {{carona.motorista.nome}} &nbsp nbsp<br> <b>{{ 'numero' | translate }}</b>(083) {{carona.motorista.telefone}} <br>
+            <p id = "fontSizeBusca"><b>{{ 'nome' | translate }}</b>: {{carona.motorista.nome}} &nbsp<br> <b>{{ 'numero' | translate }}</b>(083) {{carona.motorista.telefone}} <br>
               <b>{{ 'email' | translate }}</b>: {{carona.motorista.email}}<br>
               <b>{{ 'dia.aula' | translate }}</b>: {{carona.horario.dia}}: {{carona.horario.aula}} <br>
             </p>
