--- a/cliente/app/views/usuario/notificacao.html
+++ b/cliente/app/views/usuario/notificacao.html
@@ -23,7 +23,7 @@
 <div class="container">
   <div class="list-group">
     <div class="divNotify" ng-repeat="notificacao in notificacoes">
-      <a class="list-group-item notify">{{notificacao.message}}<span title = "Descartar Notificação" ng-click="descartaNotify($index)"class="badge">sssx</span></a>
+      <a class="list-group-item notify">{{notificacao.message}}<span title = "Descartar Notificação" ng-click="descartaNotify($index)"class="badge">Descartar</span></a>
     </div>
   </div>
 </div>
